# midnight-cardano-bridge

./: .deepresearch.yml  .gitignore  AGENTS.md  EXAMINATION-CHECKLIST.md  README.md  RESEARCH-PLAN.md  package-lock.json  package.json
.grok/: config.toml
docs/: fable-5-audit.xml  grok-4.5-handoff.xml
knowledge_base/: index.md
knowledge_base/bridges/: cardano-system-transactions.md  groth16-cardano-preview-deployment.md  midnight-cardano-recursive-bridge.md  omega-proof.md  zk-recovery-architecture.md
knowledge_base/cardano/: ak-381-aiken-groth16.md  groth16-onchain-cost.md  groth16-verifier-plutus.md  halo2-plutus-verifier.md  mithril-bls-certificates.md  ouroboros-peras-finality.md
knowledge_base/consensus/: babe-block-production.md  beefy-implementation.md  beefy-light-client.md  beefy.md  grandpa-finality.md  midnight-consensus-aura-grandpa.md  midnight-signature-schemes.md  midnight-validator-set-sizing.md  polkadot-hybrid-consensus.md
knowledge_base/midnight/: compact-circuits.md  midnight-proofs-recursion.md  overview.md  proving-system-curves.md  transaction-format.md  transaction-types.md  zero-knowledge-proofs.md  zkir-v3.md  (+1 more)
openspec/: config.yaml
protocol/: README.md  gate-roster-v1.cbor.hex  gate-roster-v1.json  gate-roster-v1.schema.json
reference/: README.md
reference/rust/: Cargo.toml
reference/rust/src/: cbor.rs  harness.rs  lib.rs  main.rs  model.rs
reference/rust/tests/: structural.rs
scripts/: CanonicalJson.psm1  CommittedInputManifest.psm1  compare-reference-harness.ps1  setup-reference-harness.ps1  verify-reference-harness.ps1
(+172 files in other folders)
